--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+futures-util = "0.3"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = { version = "0.4" }
 
