--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "a10y-vortex",
   "version": "0.1.2",
   "description": "Vortex WASM bindings (WIP)",
-  "browser": "vortex.js",
-  "main": "index.js",
+  "type": "module",
+  "module": "./vortex.js",
+  "types": "./vortex.d.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "wasm-pack build --target web && tsc"
   },
   "author": "",
   "license": "ISC",
   "files": [
+    "vortex.ts",
     "vortex.js",
+    "vortex.d.ts",
     "pkg/vortex_wasm.js",
     "pkg/vortex_wasm_bg.wasm",
     "pkg/vortex_wasm_bg.wasm.d.ts"
-  ]
+  ],
+  "devDependencies": {
+    "typescript": "~5.6.2"
+  }
 }
